# SistemaDeContagemDeAlunos

./: database2.db  main.py  pyproject.toml
config/: database.py
models/: contagens.py  tipos.py  turmas.py  usuario.py
routers/: categorias.py  cotagens.py  tipos.py  turmas.py  usuarios.py
schemas/: categoria.py  contagens.py  tipos.py  turmas.py  usuario.py
